fix letter spacing for links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,7 +376,6 @@ a:active {
 
 .post .post-content a {
     text-decoration: none;
-    letter-spacing: 1px;
     color: #2660ab;
 }
 
